--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: "AllianceNo1";
+  src: url("../public/fonts/AllianceNo1-Regular.woff2") format("woff");
+  font-display: swap;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@font-face {
+  font-family: "AllianceNo2";
+  src: url("../public/fonts/AllianceNo2-Regular.woff2") format("woff");
+  font-display: swap;
 }
